--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "set PORT=3001 && nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "set PORT=3001 && nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
